--- a/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/3.observer-thread-model/2.worker-thread.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/3.observer-thread-model/2.worker-thread.md
@@ -111,7 +111,7 @@ grep 'dump tenant info.tenant={id:1002' log/observer.log | sed 's/,/,\n/g'
 dump tenant info(tenant={id:1002, //租户id
 tenant_meta:{unit:{tenant_id:1002, // tenant_meta是租户元数据包括unit配置信息和SuperBlcok以及create_status
 unit_id:1001, //unit id
-has_memstore:true, // 是否有memtable
+has_memstore:true, // 是否有 MemTable
 unit_status:"NORMAL", //unit的状态: UNIT_NORMAL/UNIT_MIGRATE_IN/UNIT_MIGRATE_OUT/UNIT_MARK_DELETING/UNIT_WAIT_GC_IN_OBSERVER/UNIT_DELETING_IN_OBSERVER/UNIT_ERROR_STAT
 config:{unit_config_id:1003, // unit的配置id
 name:"2c2g", //unit配置的名字
