--- a/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/2.data-storage/1.data-storage-overview.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/2.data-storage/1.data-storage-overview.md
@@ -4,6 +4,6 @@
 
 在一个 Partition Group 中可能包含多个 Partition，注意这些 Partition 的分区键和分区规则要完全相同。Partition Group 是 OceanBase 数据库的 Leader 选举和迁移复制的最小单位。Partition 就是表的一个分区，和 Oracle/MySQL 对于分区的定义基本相同。表的分区规则可能有很多种，例如 Hash 分区、Range 分区、List 分区甚至二级分区等等，但对于存储层来说，并不关心以上分区规则，都一视同仁为 Partition。
 
-在 OceanBase 数据库中, 对于用户表支持创建局部索引，局部索引的特征就是在存储上会和主表绑定在同一个 partiton 内部存储，主表和每个索引在内部会存储在各自独立的Table Store 内，在每一个Table Store 中会包含多个 SSTable 和 MEMTable。MEMTable 存储于内存，存储动态数据，提供读写操作；SSTable 存储于磁盘，存储静态数据并且只读。
+在 OceanBase 数据库中, 对于用户表支持创建局部索引，局部索引的特征就是在存储上会和主表绑定在同一个 partiton 内部存储，主表和每个索引在内部会存储在各自独立的Table Store 内，在每一个Table Store 中会包含多个 SSTable 和 MemTable。MemTable 存储于内存，存储动态数据，提供读写操作；SSTable 存储于磁盘，存储静态数据并且只读。
 
 ![2](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6073623461/p356031.jpg)
