--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/2.displays-the-status-of-a-session.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/2.displays-the-status-of-a-session.md
@@ -116,7 +116,7 @@ obclient> SHOW PROXYSESSION ATTRIBUTE 2147549201 like '%id%';
 
 |           字段           |               字段                |
 |------------------------|---------------------------------|
-| proxy_sessid           | OBProxy 的会话 ID 号                |
+| proxy_sessid           | ODP 的会话 ID 号                |
 | cluster                | 所属集群名                           |
 | socket_fd              | 套接字描述符                          |
 | tenant                 | 租户                              |
@@ -140,4 +140,4 @@ obclient> SHOW PROXYSESSION ATTRIBUTE 2147549201 like '%id%';
 | server_ip              | OBServer 节点的 IP 地址                |
 | server_port            | OBServer 节点的端口号                   |
 | server_sessid          | OBServer 节点的会话 ID 号               |
-| ss_id                  | OBProxy 标记 Server Session的 ID 号 |
+| ss_id                  | ODP 标记 Server Session的 ID 号 |
