--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/1.odp-table-routing.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/1.odp-table-routing.md
@@ -4,11 +4,11 @@
 
 在 OceanBase 数据库中，Partition 是数据存储的基本单元。当我们创建表时，就会存在表和 Partition 的映射。如果是非分区表，一张表仅对应一个 Partition，如果是分区表，一张表可能会对应多个 Partition。目前 OceanBase 数据库未实现 Partition 的合并和分裂。
 
-在 OceanBase 数据库中，有 Local 计划、Remote 计划和 Distributed 计划三种表路由。Local 计划、Remote 计划均为单分区的路由。OBProxy 的作用就是尽量消除 Remote 计划，将路由尽可能的变为 Local 计划。如果表路由类型为 Remote 计划的 SQL 过多，说明该 OBProxy 的路由可能存在问题（可通过查看 `oceanbase.GV$OB_SQL_AUDIT` 视图中 `plan_type` 字段来确认）。
+在 OceanBase 数据库中，有 Local 计划、Remote 计划和 Distributed 计划三种表路由。Local 计划、Remote 计划均为单分区的路由。ODP 的作用就是尽量消除 Remote 计划，将路由尽可能的变为 Local 计划。如果表路由类型为 Remote 计划的 SQL 过多，说明该 ODP 的路由可能存在问题（可通过查看 `oceanbase.GV$OB_SQL_AUDIT` 视图中 `plan_type` 字段来确认）。
 
 ## 非分区表路由
 
-在 OBProxy 中保存了 Partition 和 OBServer_addr 的映射缓存，Partition 通过 SQL Parser 功能解析获取表名，根据表名去 Location Cache 中获取 Partition 所在 OBServer 节点的 IP。
+在 ODP 中保存了 Partition 和 OBServer_addr 的映射缓存，Partition 通过 SQL Parser 功能解析获取表名，根据表名去 Location Cache 中获取 Partition 所在 OBServer 节点的 IP。
 
 存在如下三种情况：
 
@@ -22,7 +22,7 @@
 
 ## 分区表路由
 
-和非分区表一样，在 OBProxy 中保存了 Partition 和 OBServer_addr 的映射缓存，Partition 通过 SQL Parser 功能解析获取表名。相比非分区表，分区表额外增加了一个分区 ID 信息，根据表名和分区 ID 去 Location Cache 中获取 Partition 所在 OBServer 的 IP。
+和非分区表一样，在 ODP 中保存了 Partition 和 OBServer_addr 的映射缓存，Partition 通过 SQL Parser 功能解析获取表名。相比非分区表，分区表额外增加了一个分区 ID 信息，根据表名和分区 ID 去 Location Cache 中获取 Partition 所在 OBServer 的 IP。
 
 分区 ID 通过 SQL 语句获取，来源往往是 where 子句的表达式、insert 语句 values 值。需要保证能获取到 `a = xxx`，其中 `a` 为分区键，`xxx` 为常量。示例如下：
 
@@ -33,7 +33,7 @@ obclient> UPDATE t1 SET c2 = 3 WHERE c1 = 5;
 
 这里提取到 `c1 = 5`，通过这个信息可以计算到影响到的分区 ID，将 SQL 转发给对应分区所在 OBServer 节点即可。
 
-OBProxy 如果计算不出分区 ID，那么就无法拉取准确的路由。可以在 obproxy.log 日志文件中，搜索 "calculate partition id" 查看是否计算成功。示例如下：
+ODP 如果计算不出分区 ID，那么就无法拉取准确的路由。可以在 obproxy.log 日志文件中，搜索 "calculate partition id" 查看是否计算成功。示例如下：
 
 ```shell
 [root@ocp-deploy-obnorpm2-bfc89744b-qsfkz log]# grep "calculate partition id" obproxy.log
