--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/3.ldc-route.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/3.ldc-route.md
@@ -4,7 +4,7 @@
 
 OceanBase 数据库作为典型的高可用分布式关系型数据库，使用 Paxos 协议进行日志同步，天然支持多地多中心的部署方式以提供高可靠的容灾保证。但当真正多地多中心部署时，任何数据库都会面临异地路由延迟问题。
 
-逻辑数据中心（Logical Data Center，LDC）路由正是为了解决这一问题而设计的，通过给 OceanBase 集群的每个 Zone 设置 Region 属性和 IDC 属性，并给 OBProxy 指定 IDC 名称配置项后，当数据请求发到 OBProxy 时，OBProxy 将按如下优先级顺序进行路由转发：
+逻辑数据中心（Logical Data Center，LDC）路由正是为了解决这一问题而设计的，通过给 OceanBase 集群的每个 Zone 设置 Region 属性和 IDC 属性，并给 ODP 指定 IDC 名称配置项后，当数据请求发到 ODP 时，ODP 将按如下优先级顺序进行路由转发：
 
 1. 选取本机房不在合并的副本。
 
@@ -22,7 +22,7 @@ LDC 路由的设置需要进行以下 3 个步骤：
 
 1. OceanBase 集群的 LDC 配置。
 
-2. OBProxy 的 LDC 配置。
+2. ODP 的 LDC 配置。
 
 3. 应用配置弱一致性读。
 
@@ -61,26 +61,26 @@ LDC 路由的设置需要进行以下 3 个步骤：
    obclient> SELECT * FROM oceanbase.DBA_OB_ZONES;
    ```
 
-## OBProxy 的 LDC 配置
+## ODP 的 LDC 配置
 
-OBProxy 的 LDC 配置有两种方式，其中 zue 为示例机房：
+ODP 的 LDC 配置有两种方式，其中 zue 为示例机房：
 
-* OBProxy 进程启动时通过参数指定进行配置（建议使用的方式），示例语句如下所示。
+* ODP 进程启动时通过参数指定进行配置（建议使用的方式），示例语句如下所示。
 
   ```shell
   cd /opt/taobao/install/obproxy-1.5.5
   ./bin/obproxy -o proxy_idc_name=zue
   ```
 
-* 在 OceanBase 数据库支持的客户端工具中运行 `ALTER` 语句修改 OBProxy 配置项，示例语句如下所示。
+* 在 OceanBase 数据库支持的客户端工具中运行 `ALTER` 语句修改 ODP 配置项，示例语句如下所示。
 
   ```sql
   obclient> ALTER PROXYCONFIG SET proxy_idc_name= 'zue';
   ```
 
-以上述示例中的 zue 机房为例，为 OBProxy 配置 LDC 后，如果应用部署在上海 zue 机房，当应用逻辑发起弱一致性读时，请求都是优先发往上海机房。
+以上述示例中的 zue 机房为例，为 ODP 配置 LDC 后，如果应用部署在上海 zue 机房，当应用逻辑发起弱一致性读时，请求都是优先发往上海机房。
 
-为 OBProxy 配置 LDC 后可通过下述语句检查配置是否生效。
+为 ODP 配置 LDC 后可通过下述语句检查配置是否生效。
 
 ```sql
 obclient> SHOW PROXYINFO IDC;
