--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-remove-a-zone.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-remove-a-zone.md
@@ -17,7 +17,7 @@ zone_option_list:
 zone_option:
     | region
     | idc
-    | zone_type {READWRITE | ENCRYPTION}
+    | zone_type ReadWrite
 ```
 
 使用说明：
@@ -34,7 +34,7 @@ zone_option:
 
   * `idc`：指定 Zone 所在机房的名称。如果不显示指定，默认为空。
 
-  * `zone_type`：指定 Zone 为读写 Zone（`READWRITE` ）或者加密 Zone（`ENCRYPTION`）。如果不显式指定 `zone_type`，默认为读写 Zone。
+  * `zone_type`：指定 Zone 为读写 Zone（`ReadWrite` ）。如果不显式指定 `zone_type`，默认为读写 Zone。
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
