--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/4.recommended-general-system-parameters.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/4.recommended-general-system-parameters.md
@@ -4,7 +4,7 @@
 
 ## 集群级参数
 
-* memory_limit：用于配置 OBServer 最大可使用的总内存大小。当前该值无上限，如果设置的内存的最大上限超过了实际的物理内存总和，则会导致系统中其他按总内存计算的值偏大。
+* memory_limit：用于配置 OceanBase 数据库最大可使用的总内存大小。当前该值无上限，如果设置的内存的最大上限超过了实际的物理内存总和，则会导致系统中其他按总内存计算的值偏大。
 
   * 默认值：0
 
@@ -40,7 +40,7 @@
     obclient> ALTER SYSTEM SET rootservice_memory_limit='2G';
     ```
 
-* memstore_limit_percentage：用于设置租户使用 MEMStore 的内存占其总可用内存的百分比。
+* memstore_limit_percentage：用于设置租户使用 MemStore 的内存占其总可用内存的百分比。
 
   * 默认值：50
 
