--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/6.recommended-configuration-of-minimum-resource-parameters.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/6.recommended-configuration-of-minimum-resource-parameters.md
@@ -20,7 +20,7 @@
 
 **配置说明**
 
-`memory_limit` 参数可用于调整 OBServer 的最大可使用内存数。由于最低内存配置为 64 GB，预留部分给系统使用，则建议 OBServer 独占 58 GB，即系统租户内存与程序内存共 58 GB。
+`memory_limit` 参数可用于调整 OceanBase 数据库的最大可使用内存数。由于最低内存配置为 64 GB，预留部分给系统使用，则建议 OceanBase 数据库独占 58 GB，即系统租户内存与程序内存共 58 GB。
 
 **配置值**
 
@@ -34,7 +34,7 @@
 
 **配置说明**
 
-根据建议的最低内存配置为 64 GB，且 OBServer 独占 58 GB，则系统租户的可使用内存需要配置为 4 GB。
+根据建议的最低内存配置为 64 GB，且 OceanBase 数据库独占 58 GB，则系统租户的可使用内存需要配置为 4 GB。
 
 **配置值**
 
