--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/2.assign-a-resource-pool-to-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/2.assign-a-resource-pool-to-a-tenant.md
@@ -37,7 +37,7 @@ ALTER TENANT tenant_name RESOURCE_POOL_LIST [=](pool_name [, pool_name...]) ;
 
 ### 示例背景
 
-假设集群中当前仅有 `z1`、`z2`、`z3` 三个 Zone，且三个 Zone 都属于同一个 Region，每个 Zone 内一台 OBServer。集群中有一个普通租户 `tenant1`，当前副本分布情况 `locality='F@z1,F@z2,F@z3', resource_pool_list=('pool1');`，根据业务需要，需要将租户 `tenant1` 由三副本调整为五副本，即租户的 Locality 由 `F@z1,F@z2,F@z3` 变为 `F@z1,F@z2,F@z3,F@z4,F@z5`。
+假设集群中当前仅有 `z1`、`z2`、`z3` 三个 Zone，且三个 Zone 都属于同一个 Region，每个 Zone 内一台 OBServer 节点。集群中有一个普通租户 `tenant1`，当前副本分布情况 `locality='F@z1,F@z2,F@z3', resource_pool_list=('pool1');`，根据业务需要，需要将租户 `tenant1` 由三副本调整为五副本，即租户的 Locality 由 `F@z1,F@z2,F@z3` 变为 `F@z1,F@z2,F@z3,F@z4,F@z5`。
 
 ### 示例操作
 
@@ -45,9 +45,9 @@ ALTER TENANT tenant_name RESOURCE_POOL_LIST [=](pool_name [, pool_name...]) ;
 
    在集群中增加 Zone 的具体操作请参见 [增加或删除 Zone](../../1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-remove-a-zone.md)。
 
-2. 在 `z4`、`z5` 两个 Zone 上各添加一台 OBServer。
+2. 在 `z4`、`z5` 两个 Zone 上各添加一台 OBServer 节点。
 
-   向 Zone 内添加 OBServer 的具体操作请参见 [添加 OBServer](../../1.manage-clusters/5.manage-observer/1.add-observer.md)。
+   向 Zone 内添加 OBServer 节点的具体操作请参见 [添加节点](../../1.manage-clusters/5.manage-observer/1.add-observer.md)。
 
 3. 使用 `root` 用户登录 `sys` 租户，为租户 `tenant1` 在 `z4`、`z5` 上添加资源。
 
