--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/3.modifies-the-resource-pool.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/3.modifies-the-resource-pool.md
@@ -19,7 +19,7 @@ ZONE_LIST [=] ('zone'[, 'zone' ...]);
 
 * 修改资源池的命令每次仅支持修改一个参数。
 
-* `UNIT_NUM` 表示指定修改每个 Zone 下的资源单元个数，取值需要小于等于对应 Zone 中的 OBServer 的个数。
+* `UNIT_NUM` 表示指定修改每个 Zone 下的资源单元个数，取值需要小于等于对应 Zone 中的 OBServer 节点的个数。
 
   减小 `UNIT_NUM` 时，使用 `DELETE UNIT` 可以明确指定本次缩容即将删除的 Unit。如果不指定 `DELETE UNIT`，则系统将自动选择 Unit 进行删除。
 
