--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
@@ -54,7 +54,7 @@
 
    * Server 级别的转储
 
-       可以对指定的一个或多个 OBServer 进行转储。
+       可以对指定的一个或多个 OBServer 节点进行转储。
 
        SQL 语句如下：
 
@@ -104,7 +104,7 @@
 
    * 对本租户指定 Server 发起转储
 
-     可以指定本租户的一个或多个 OBServer 进行转储。
+     可以指定本租户的一个或多个 OBServer 节点进行转储。
 
      SQL 语句如下：
 
