--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/6.execution-plan-cache-memory-management.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/6.execution-plan-cache-memory-management.md
@@ -24,7 +24,7 @@
 
 * 淘汰计划的低水位线 ＝ 1 GB \* 50 / 100 = 0.5 GB
 
-当该租户在某个 OBServer 上的计划缓存使用超过 0.9 GB 时，会触发淘汰，且优先淘汰最久未执行的计划。当淘汰到使用内存只有 0.5 GB 时，则停止淘汰。如果淘汰速度没有新计划生成的速度快，则当计划缓存使用内存达到内存上限绝对值 1 GB 时，将不再往计划缓存中添加新计划，直到淘汰后使用的内存小于 1 GB 时才会再次添加新计划到计划缓存中。
+当该租户在某个 OBServer 节点上的计划缓存使用超过 0.9 GB 时，会触发淘汰，且优先淘汰最久未执行的计划。当淘汰到使用内存只有 0.5 GB 时，则停止淘汰。如果淘汰速度没有新计划生成的速度快，则当计划缓存使用内存达到内存上限绝对值 1 GB 时，将不再往计划缓存中添加新计划，直到淘汰后使用的内存小于 1 GB 时才会再次添加新计划到计划缓存中。
 
 ## 更多信息
 
