--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/7.view-memory-usage.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/7.view-memory-usage.md
@@ -4,7 +4,7 @@
 
 ## 视图查询
 
-### 查询 OBServer 总内存
+### 查询 OBServer 节点总内存
 
 在 `sys` 租户下，通过查询 `oceanbase.gv$sysstat` 视图可以查看指定机器的内存占用，示例如下：
 
@@ -140,9 +140,9 @@ obclient> SELECT * FROM oceanbase.GV$OB_MEMORY WHERE svr_ip = 'xx.xx.xx.xx' AND 
 
 ## 日志查询
 
-### 查询 OBServer 总内存
+### 查询 OBServer 节点总内存
 
-1. 登录 OBServer 所在的机器。
+1. 登录 OBServer 节点所在的机器。
 
 2. 执行以下命令，进入日志文件所在的目录。
 
@@ -150,7 +150,7 @@ obclient> SELECT * FROM oceanbase.GV$OB_MEMORY WHERE svr_ip = 'xx.xx.xx.xx' AND 
    cd ~/oceanbase/log
    ```
 
-3. 执行以下命令，查询 OBServer 总内存使用情况。
+3. 执行以下命令，查询 OBServer 节点总内存使用情况。
 
    ```shell
    grep CHUNK_MGR observer.log
@@ -171,14 +171,14 @@ obclient> SELECT * FROM oceanbase.GV$OB_MEMORY WHERE svr_ip = 'xx.xx.xx.xx' AND 
 
    |      参数       |             说明              |
    |---------------|-----------------------------|
-   | limit         | OBServer 总内存限制              |
-   | hold          | OBServer 从操作系统获取到的所有的内存     |
-   | used          | OBServer 实际使用到的内存（包括 Cache） |
-   | freelist_hold | OBServer 未使用的内存             |
+   | limit         | OBServer 节点总内存限制              |
+   | hold          | OBServer 节点从操作系统获取到的所有的内存     |
+   | used          | OBServer 节点实际使用到的内存（包括 Cache） |
+   | freelist_hold | OBServer 节点未使用的内存             |
 
 ### 查看各个租户的内存使用总量
 
-1. 登录 OBServer 所在的机器。
+1. 登录 OBServer 节点所在的机器。
 
 2. 执行以下命令，进入日志文件所在的目录。
 
@@ -206,7 +206,7 @@ obclient> SELECT * FROM oceanbase.GV$OB_MEMORY WHERE svr_ip = 'xx.xx.xx.xx' AND 
 
 ### 查看某个租户内存使用详情
 
-1. 登录 OBServer 所在的机器。
+1. 登录 OBServer 节点所在的机器。
 
 2. 执行以下命令，进入日志文件所在的目录。
 
@@ -233,7 +233,7 @@ obclient> SELECT * FROM oceanbase.GV$OB_MEMORY WHERE svr_ip = 'xx.xx.xx.xx' AND 
 
 ### 查看某个内存模块的内存使用详情
 
-1. 登录 OBServer 所在的机器。
+1. 登录 OBServer 节点所在的机器。
 
 2. 执行以下命令，进入日志文件所在的目录。
 
