--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/8.management-process/4.oceanbase-database-background-threads.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/8.management-process/4.oceanbase-database-background-threads.md
@@ -39,7 +39,7 @@
 | RSMonitor        | RS       | 1    | 用来监控当前 RS 的状态。                 |
 | CacheCalculator                | RS       | 1    | 用来给 location_cache 和 schema_cache 预留内存。      |
 | ObDailyMergeScheduler          | RS       | 1    | 用来调度每日合并。        |
-| ObEmptyServerChecker           | RS       | 1    | 用来检测 OBServer 上是否不存在副本。        |
+| ObEmptyServerChecker           | RS       | 1    | 用来检测 OBServer 节点上是否不存在副本。        |
 | ObFetchPrimaryDDLOperator      | RS       | 1    | 备库逻辑同步主库系统租户 Schema。           |
 | ObFreezeInfoUpdater            | RS       | 1    | 推动冻结进度和管理快照点回收点。               |
 | ObGlobalIndexBuilder           | RS       | 1    | 调度全局索引的构建。       |
@@ -53,20 +53,20 @@
 | ObRootBalancer                 | RS       | 1    | 负责生成负载均衡任务。      |
 | ObRsGtsMonitor                 | RS       | 1    | 监控 GTS 实例的分布情况，并基于 GTS 副本的分布，生成迁移或补 GTS 副本任务。              |
 | ObRsGtsTaskMgr                 | RS       | 1    | 执行 GTS 副本任务的线程。                |
-| ObHeartbeatChecker             | RS       | 1    | 负责检查和 OBServer 之间的心跳状态。        |
+| ObHeartbeatChecker             | RS       | 1    | 负责检查和 OBServer 节点之间的心跳状态。        |
 | ObStandbyClusterSchemaProcessor              | RS       | 1    | 备库副本同步主库的普通租户 Schema。          |
 | ObRestoreScheduler             | RS       | 1    | 负责恢复流程的调度。       |
 | ObWorkQueue      | RS       | 4    | 执行 RS 的异步任务，线程数通过配置项 `rootservice_async_task_thread_count` 来控制，取值范围为 \[1,10\]。         |
 | ObAsyncTaskQueue               | RS       | 16   | 执行构建索引的任务。       |
 | ObSwitchTaskQueue              | RS       | 6    | 主备库切换的任务队列，线程数通过配置项 `switchover_process_thread_count` 来控制，取值范围为 \[1, 1000\]。           |
 | LocalityReload                 | RS       | 1    | 定期刷新 Locality 信息。              |
-| RSqlPool         | RS       | 1    | 备库用来定期维护主库的 RootServer 列表。     |
+| RSqlPool         | RS       | 1    | 备库用来定期维护主库的 Root Server 列表。     |
 | ServerTracerTimer              | RS       | 1    | 用来维护和其他 Server 状态的定时任务。        |
 | LogEngine        | CLOG     | 1    | 统计监控 Clog 盘空间使用情况，执行 Clog 文件的回收操作。           |
 | CLGWR            | CLOG     | 1    | 负责 Clog item 写盘。               |
 | ClogHisRep       | CLOG     | 3    | 分区上下线时，更新 Clog History 内部表。                  |
 | BatchSubmitCtx                 | CLOG     | 1    | 负责拆分一阶段优化的事务。                  |
-| LogScanRunnable                | CLOG     | 4    | OBServer 启动时，负责扫描所有 Clog 文件。                 |
+| LogScanRunnable                | CLOG     | 4    | OBServer 节点启动时，负责扫描所有 Clog 文件。                 |
 | LogStateDri      | CLOG     | 1    | 负责 Clog 模块主备角色切换、检查副本级联状态。     |
 | ObElectionGCThread             | election | 1    | 负责 Election 对象内存的回收。           |
 | Blacklist        | CLOG     | 1    | 负责探测与通信目的端 Server 之间的网络是否联通。                 |
