--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/8.manage-directories-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/8.manage-directories-of-oracle-mode.md
@@ -51,7 +51,7 @@ obclient> DROP DIRECTORY sql_file_dir;
 
 * OceanBase 数据库不会检查或判断指定的文件系统路径是否存在以及是否有相应的读写权限。
 
-* 由于 OceanBase 数据库是分布式数据库，在创建目录对象时，需要保证 OBServer 所有节点都能访问一致的绝对路径，故文件系统路径通常是共享文件系统（例如，NFS）上的一个路径。
+* 由于 OceanBase 数据库是分布式数据库，在创建目录对象时，需要保证所有 OBServer 节点都能访问一致的绝对路径，故文件系统路径通常是共享文件系统（例如，NFS）上的一个路径。
 
 * 创建目录对象必须具有 `CREATE ANY DIRECTORY` 系统权限。
 
