--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode.md
@@ -28,32 +28,32 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@tenant IDENTIFIED BY 
 
   您也可以不指定该参数，默认访问的远端数据库类型即为 OceanBase。
   
-* `ip`：指定远端 OceanBase 数据库的 IP 地址。IP 地址可以指定为集群的 OBProxy 的 IP 地址，或者也可以指定为集群中某个 OBServer 的 IP 地址。
+* `ip`：指定远端 OceanBase 数据库的 IP 地址。IP 地址可以指定为集群的 ODP 的 IP 地址，或者也可以指定为集群中某个 OBServer 节点的 IP 地址。
 
-  当 IP 地址为指定 OBServer 的 IP 地址时，要求本地数据库与指定 OBServe之间的网络是可以互通的。
+  当 IP 地址为指定 OBServer 节点的 IP 地址时，要求本地数据库与指定 OBServe之间的网络是可以互通的。
   
-* `port`：指定远端 OceanBase 数据库的端口号。端口号可以指定为集群的 Proxy 的端口号，或者也可以指定为集群中某个 OBServer 的端口号。
+* `port`：指定远端 OceanBase 数据库的端口号。端口号可以指定为集群的 Proxy 的端口号，或者也可以指定为集群中某个 OBServer 节点的端口号。
 
-  当端口号为指定 OBServer 的端口号时，要求本地数据库与指定 OBServer 之间的网络是可以互通的。
+  当端口号为指定 OBServer 节点的端口号时，要求本地数据库与指定 OBServer 节点之间的网络是可以互通的。
   
 * `cluster_name`：远端 OceanBase 数据库对应的集群的名称。仅当 IP 和端口号为集群的 Proxy 的 IP 和端口号，且 Proxy 是由 ConfigUrl 方式部署时，才需要指定集群名称。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>在部署 OBProxy 时，有以下两种部署方式：</p>
+    <p>在部署 ODP 时，有以下两种部署方式：</p>
     <ul>
     <li>
-    <p>ConfigUrl 部署方式：表示在启动 OBProxy 时，通过在命令中指定 <code>obproxy_config_server_url</code> 参数项来查询获取 OceanBase 集群的 RootServer 信息的方式。</p>
+    <p>ConfigUrl 部署方式：表示在启动 ODP 时，通过在命令中指定 <code>obproxy_config_server_url</code> 参数项来查询获取 OceanBase 集群的 Root Server 信息的方式。</p>
     </li>
     <li>
-    <p>RsList 部署方式：表示在启动 OBProxy 时，通过在命令中指定 <code>-r</code> 参数来指定 OceanBase 集群的 RootServer 信息的方式。</p>
+    <p>RsList 部署方式：表示在启动 ODP 时，通过在命令中指定 <code>-r</code> 参数来指定 OceanBase 集群的 Root Server 信息的方式。</p>
     </li>
     </ul>
   </main>
 
 示例如下：
 
-* 创建连接到远端 OceanBase 数据库的 DBLink，且 IP 地址和端口号为指定 OBServer 的 IP 地址和端口号。
+* 创建连接到远端 OceanBase 数据库的 DBLink，且 IP 地址和端口号为指定 OBServer 节点的 IP 地址和端口号。
 
   ```sql
   obclient> CREATE DATABASE LINK ob_dblink CONNECT TO ob_user@oracle IDENTIFIED BY 1** OB HOST '10.10.10.1:12345';
