--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/4.manage-replicas/1.replica-overview.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/4.manage-replicas/1.replica-overview.md
@@ -27,7 +27,7 @@
 |       特性       |            描述           |
 |------------------|--------------------------------|
 | LOG              | 有，参与投票（ SYNC_CLOG ）      |
-| MEMTable         | 有（ WITH_MEMSTORE ）           |
+| MemTable         | 有（ WITH_MEMSTORE ）           |
 | SSTable          | 有（ WITH_SSSTORE ）            |
 | 数据安全          | 高                             |
 | 恢复为 Leader 的时间 | 快                          |
