--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/4.manage-replicas/4.delete-a-replica-of-a-tenant-in-a-private-zone.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/4.manage-replicas/4.delete-a-replica-of-a-tenant-in-a-private-zone.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-通过删除副本的方式变更副本前，请确认目标副本是否均正常。例如：5 副本变更为 4 副本时，需要目标副本的 4 台 OBServer 均在线。
+通过删除副本的方式变更副本前，请确认目标副本是否均正常。例如：5 副本变更为 4 副本时，需要目标副本的 4 台 OBServer 节点均在线。
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
