--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/2.deploy-nfs.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/2.deploy-nfs.md
@@ -10,11 +10,11 @@
 
 * 由于 OceanBase 数据库备份的并发控制需依赖 NFS4 的文件锁功能，故在挂载 NFS 时，需使用 NFS 4.1 及以上版本。
 
-* 在使用 NFS 作为备份介质时，必须保证所有 OBServer 都挂载了同一个服务器的 NFS。同时，为保证备份的顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 具体操作请参见本节 **部署 NFS 客户端**。
+* 在使用 NFS 作为备份介质时，必须保证所有 OBServer 节点都挂载了同一个服务器的 NFS。同时，为保证备份的顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 具体操作请参见本节 **部署 NFS 客户端**。
 
-* 在重启 OBServer 时，需要先启动 NFS，再启动 OBServer。
+* 在重启 OBServer 节点时，需要先启动 NFS，再启动 OBServer 节点。
 
-* 添加新的机器后，在启动 OBServer 前，需要保证新的机器挂载 NFS 成功或者可以备份到其他介质。
+* 添加新的机器后，在启动 OBServer 节点前，需要保证新的机器挂载 NFS 成功或者可以备份到其他介质。
 
 ## 部署 NFS 服务器端
 
@@ -87,11 +87,11 @@
 
 ## 部署 NFS 客户端
 
-部署 NFS 客户端时，需要在所有 OBServer 机器上进行操作。
+部署 NFS 客户端时，需要在所有 OBServer 节点所在的机器上进行操作。
 
-以下以在某一台 OBServer 上的操作为例，提供操作指导。
+以下以在某一台 OBServer 节点上的操作为例，提供操作指导。
 
-1. 登录 OBServer。
+1. 登录 OBServer 节点所在的机器。
 
 2. 执行以下命令，通过 YUM 包管理器安装 NFS。
 
