--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/1.preparation-before-data-backup.md
@@ -27,10 +27,10 @@
     <p><code>data_backup_dest</code> 的值不支持设置为带有问号（?）的字符串。</p>
     </li>
     <li>
-    <p><code>data_backup_dest</code> 的值必须设置为绝对路径，保证 OBServer 对 <code>data_backup_dest</code> 具有写权限。</p>
+    <p><code>data_backup_dest</code> 的值必须设置为绝对路径，保证 OBServer 节点对 <code>data_backup_dest</code> 具有写权限。</p>
     </li>
     <li>
-    <p>必须保证所有 OBServer 都挂载了同一个服务器的 NFS。同时，为保证备份的顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 具体操作请参见 <a href="../2.deploy-nfs.md">部署 NFS 客户端</a>。</p>
+    <p>必须保证所有 OBServer 节点都挂载了同一个服务器的 NFS。同时，为保证备份的顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 具体操作请参见 <a href="../2.deploy-nfs.md">部署 NFS 客户端</a>。</p>
     </li>
     </ul>
   </main>
