--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md
@@ -18,9 +18,9 @@
 
    在集群中增加 Zone 的具体操作请参见 [增加或删除 Zone](../../../../2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-remove-a-zone.md)。
 
-3. 在 `z4`、`z5` 两个 Zone 上各添加一台 OBServer。
+3. 在 `z4`、`z5` 两个 Zone 上各添加一台 OBServer 节点。
 
-   向 Zone 内添加 OBServer 的具体操作请参见 [添加 OBServer](../../../../2.basic-database-management/1.manage-clusters/5.manage-observer/1.add-observer.md)。
+   向 Zone 内添加 OBServer 节点的具体操作请参见 [添加节点](../../../../2.basic-database-management/1.manage-clusters/5.manage-observer/1.add-observer.md)。
 
 4. 为租户 `tenant1` 在 `z4`、`z5` 上添加资源。
 
