--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/2.shrink/1.reduce-zone-from-cluster.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/2.shrink/1.reduce-zone-from-cluster.md
@@ -19,7 +19,7 @@
 
 您可以通过 SQL 语句向集群中减少 Zone 的方式来进行集群的缩容，该缩容方式通常用于将集群中租户的 5 副本降为 3 副本的场景。从集群中减少 Zone，同时减少集群中的机器台数。
 
-假设当前集群中共包含 5 个可用区 `z1`、`z2`、`z3`、`z4`、`z5`，且 5 个 Zone 都属于同一个 Region，每个 Zone 内 1 台 OBServer。集群中有一个普通租户 `tenant1`，租户信息如下 `CREATE TENANT IF NOT EXISTS tenant1 CHARSET='utf8mb4', ZONE_LIST=('z1','z2','z3','z4','z5'), PRIMARY_ZONE='z1,z2,z4', RESOURCE_POOL_LIST=('pool1')`；当前副本分布情况 `locality='F@z1,F@z2,F@z3,F@z4,F@z5', resource_pool_list=('pool1')`，资源池的资源分布情况 `CREATE RESOURCE POOL pool1 UNIT 'uc1', UNIT_NUM 1, ZONE_LIST ('z1', 'z2', 'z3','z4', 'z5')`。
+假设当前集群中共包含 5 个可用区 `z1`、`z2`、`z3`、`z4`、`z5`，且 5 个 Zone 都属于同一个 Region，每个 Zone 内 1 个 OBServer 节点。集群中有一个普通租户 `tenant1`，租户信息如下 `CREATE TENANT IF NOT EXISTS tenant1 CHARSET='utf8mb4', ZONE_LIST=('z1','z2','z3','z4','z5'), PRIMARY_ZONE='z1,z2,z4', RESOURCE_POOL_LIST=('pool1')`；当前副本分布情况 `locality='F@z1,F@z2,F@z3,F@z4,F@z5', resource_pool_list=('pool1')`，资源池的资源分布情况 `CREATE RESOURCE POOL pool1 UNIT 'uc1', UNIT_NUM 1, ZONE_LIST ('z1', 'z2', 'z3','z4', 'z5')`。
 
 根据业务需要，需要将租户 `tenant1` 由 5 副本降为 3 副本，即租户的 Locality 变成 `locality='F@z1,F@z2,F@z3`。本节以仅租户 `tenant1` 使用了 `z4`、`z5` 其他租户未使用 `z4`、`z5` 为例，提供缩容的操作指导。
 
@@ -55,7 +55,7 @@
    obclient> ALTER RESOURCE POOL pool1 ZONE_LIST=('z1','z2','z3');
    ```
 
-6. 执行以下语句，从集群中删除 Zone 中的 OBServer。
+6. 执行以下语句，从集群中删除 Zone 中的 OBServer 节点。
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
@@ -68,13 +68,13 @@
    obclient> ALTER SYSTEM DELETE SERVER 'xxx.xxx.x.xx5:2882';
    ```
 
-   删除后，可以执行以下语句，确认列表中已查询不到这些 OBServer，则表示删除成功。
+   删除后，可以执行以下语句，确认列表中已查询不到这些 OBServer 节点，则表示删除成功。
 
    ```sql
    obclient> SELECT * FROM oceanbase.DBA_OB_SERVERS;
    ```
 
-7. 确认 OBServer 删除成功后，执行以下语句，从集群中删除 Zone。
+7. 确认 OBServer 节点删除成功后，执行以下语句，从集群中删除 Zone。
 
    ```sql
    obclient> ALTER SYSTEM DELETE ZONE z4;
