--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
@@ -17,7 +17,7 @@
   
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>调大资源池的 <code>UNIT_NUM</code> 时，修改后的 <code>UNIT_NUM</code> 数量要小于或等于 Zone 内可用的 OBServer 数量。</p>
+    <p>调大资源池的 <code>UNIT_NUM</code> 时，修改后的 <code>UNIT_NUM</code> 数量要小于或等于 Zone 内可用的 OBServer 节点数量。</p>
   </main>
 
 ## 通过 SQL 语句修改租户的 UNIT_NUM
@@ -26,7 +26,7 @@
 
 ### 背景信息
 
-假设当前集群中共包含 3 个可用区 `z1`、`z2`、`z3`，每个 Zone 内包含 3 台 OBServer。在集群中创建一个普通租户 `MySQL`，其资源分配情况如下：
+假设当前集群中共包含 3 个可用区 `z1`、`z2`、`z3`，每个 Zone 内包含 3 个 OBServer 节点。在集群中创建一个普通租户 `MySQL`，其资源分配情况如下：
 
 ```sql
 obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 6, MIN_CPU 6, MEMORY_SIZE '36G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT=0, LOG_DISK_SIZE '2G';
