--- a/zh-CN/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/2.monitoring/2.performance-monitoring.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/2.monitoring/2.performance-monitoring.md
@@ -68,11 +68,11 @@
 
    * **Zone** ：查看指定 Zone 的性能监控数据。
 
-   * **OBServer** ：查看指定 OBServer 的性能监控数据。
+   * **OBServer** ：查看指定 OBServer 节点的性能监控数据。
 
      ![指定集群的性能监控](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8355280061/p167601.png)
 
-     如果需要查看实时数据，您也可以直接单击右上角的 **实时** 开关按钮，选择刷新频率、Zone 和 OBServer 后，系统会根据选择的刷新频率定时刷新数据。默认显示最近两分钟的秒级数据，支持的刷新频率为 10 秒和 1 秒。
+     如果需要查看实时数据，您也可以直接单击右上角的 **实时** 开关按钮，选择刷新频率、Zone 和 OBServer 节点后，系统会根据选择的刷新频率定时刷新数据。默认显示最近两分钟的秒级数据，支持的刷新频率为 10 秒和 1 秒。
 
 5. 切换页签，分别查看集群的数据库性能和主机性能数据。
 
@@ -120,7 +120,7 @@
 
    * **Zone** ：查看指定 Zone 的性能监控数据。
 
-   * **OBServer** ：查看指定 OBServer 的性能监控数据。
+   * **OBServer** ：查看指定 OBServer 节点的性能监控数据。
 
       ![执行租户的性能监控](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8355280061/p167621.png)
 
@@ -146,7 +146,7 @@
 
    * CPU 使用率：CPU使用率 (%)
 
-   * MEMStore 使用率：MEMStore 使用率 (%)
+   * MemStore 使用率：MemStore 使用率 (%)
 
    * Rpc 包耗时：Rpc 收、发包耗时
 
@@ -178,7 +178,7 @@
 
 8. 在 **存储与缓存** 页签，查看租户的以下性能监控数据：
 
-   * MEMStore：OceanBase 数据库可写入数据内存（Mb）
+   * MemStore：OceanBase 数据库可写入数据内存（Mb）
 
    * IOPS：平均每秒 IO 次数（次/s）
 
