--- a/zh-CN/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/2.monitoring/3.sql-monitoring.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/2.monitoring/3.sql-monitoring.md
@@ -88,7 +88,7 @@ OCP 上的 SQL 监控服务主要包括可疑 SQL、TopSQL、 SlowSQL 和 Parall
 
          ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9608630261/p268595.png)
 
-      4. 查看执行计划：通过选择不同的 OBServer 和时间区间，查看 **Plan Hash、合并版本、执行计划类型、计划生成时间、CPU 时间** 和 **命中率** 。并可对 **Plan Hash** 进行复制。
+      4. 查看执行计划：通过选择不同的 OBServer 节点和时间区间，查看 **Plan Hash、合并版本、执行计划类型、计划生成时间、CPU 时间** 和 **命中率** 。并可对 **Plan Hash** 进行复制。
 
          ![09101058](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6063421361/p325808.png)
 
@@ -113,7 +113,7 @@ OCP 上的 SQL 监控服务主要包括可疑 SQL、TopSQL、 SlowSQL 和 Parall
 
 ## TopSQL 诊断
 
-TopSQL 是指总计执行时间最长的 SQL 语句，在 OCP 的 **租户** 页面中，您可以根据时间范围、OBServer 对 TopSQL 进行筛选查询，并在 SQL 列表中查看 SQL 详情。
+TopSQL 是指总计执行时间最长的 SQL 语句，在 OCP 的 **租户** 页面中，您可以根据时间范围、OBServer 节点对 TopSQL 进行筛选查询，并在 SQL 列表中查看 SQL 详情。
 
 在 OCP 上执行 TopSQL 诊断的操作步骤如下：
 
@@ -133,7 +133,7 @@ TopSQL 是指总计执行时间最长的 SQL 语句，在 OCP 的 **租户** 页
 
       * 时间范围：可在 **时间范围** 下拉框中选择 近 5 分钟、近 10 分钟、近 20 分钟、近 30 分钟、近 1 小时、近 3小时来快速选择时间范围；也可在下拉框中选择自定义时间，并配置开始时间和结束时间。默认显示近 30 分钟内的信息。
 
-      * OBServer：选择 OBServer，查询时将只查询在该 OBServer 上执行的 SQL。
+      * OBServer：选择 OBServer 节点，查询时将只查询在该 OBServer 节点上执行的 SQL。
 
       * 内部 SQL：若勾选，则查询结果中会包含由 OceanBase 内部发起的 SQL。
 
@@ -167,7 +167,7 @@ TopSQL 是指总计执行时间最长的 SQL 语句，在 OCP 的 **租户** 页
 
          ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9608630261/p268595.png)
 
-      4. 查看执行计划：通过选择不同的 OBServer 和时间区间，查看 **Plan Hash、合并版本、执行计划类型、计划生成时间、CPU 时间** 和 **命中率** 。并可对 **Plan Hash** 进行复制。
+      4. 查看执行计划：通过选择不同的 OBServer 节点和时间区间，查看 **Plan Hash、合并版本、执行计划类型、计划生成时间、CPU 时间** 和 **命中率** 。并可对 **Plan Hash** 进行复制。
 
          ![09101058](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6063421361/p325808.png)
 
@@ -216,7 +216,7 @@ update ob_agent_collection_config_history set collect_elapsed_threshold_us = 100
 
       * 时间范围：可在 **时间范围** 下拉框中选择 近 5 分钟、近 10 分钟、近 20 分钟、近 30 分钟、近 1 小时、近 3小时来快速选择时间范围；也可在下拉框中选择自定义时间，并配置开始时间和结束时间。默认显示近 30 分钟内的信息。
 
-      * OBServer：选择 OBServer，查询时将只查询在该 OBServer 上执行的 SQL。
+      * OBServer：选择 OBServer 节点，查询时将只查询在该 OBServer 节点上执行的 SQL。
 
       * 内部 SQL：若勾选，则查询结果中会包含由 OceanBase 内部发起的 SQL。
 
@@ -256,7 +256,7 @@ update ob_agent_collection_config_history set collect_elapsed_threshold_us = 100
 
          ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9608630261/p268595.png)
 
-      5. 查看执行计划：通过选择不同的 OBServer 和时间区间，查看 **Plan Hash、合并版本、执行计划类型、计划生成时间、CPU 时间** 和 **命中率** 。并可对 **Plan Hash** 进行复制。
+      5. 查看执行计划：通过选择不同的 OBServer 节点和时间区间，查看 **Plan Hash、合并版本、执行计划类型、计划生成时间、CPU 时间** 和 **命中率** 。并可对 **Plan Hash** 进行复制。
 
          ![09101058](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6063421361/p325808.png)
 
@@ -297,7 +297,7 @@ update ob_agent_collection_config_history set collect_elapsed_threshold_us = 100
 
       * 时间范围：可在 **时间范围** 下拉框中选择 近 5 分钟、近 10 分钟、近 20 分钟、近 30 分钟、近 1 小时、近 3小时来快速选择时间范围；也可在下拉框中选择自定义时间，并配置开始时间和结束时间。默认显示近 30 分钟内的信息。
 
-      * OBServer：选择 OBServer，查询时将只查询在该 OBServer 上执行的 SQL。
+      * OBServer：选择 OBServer 节点，查询时将只查询在该 OBServer 节点上执行的 SQL。
 
       * 内部 SQL：若勾选，则查询结果中会包含由 OceanBase 内部发起的 SQL。
 
