--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/3.partition-replica-type/1.partitioned-replica-overview.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/3.partition-replica-type/1.partitioned-replica-overview.md
@@ -29,7 +29,7 @@ locality='F@z1,F@z2,F{1},R{ALL_SERVER}@z3,L@z4,L@z5'
 
 * 对于 R 型副本：该值上限为租户对应 zone 的可用 unit 数目，或者指定为 ALL_SERVER（表示尽可能在对应 zone 创建 R 副本），或者不指定（不指定视作 1）。
 
-为了限定副本的 memtable 内存属性，引入一个属性名为 memstore_percent，表示该 **副本 memstore 占用内存上限与 leader 占用内存上限的比值** 。目前，memstore_percent 属性可以 **作用于 F、R 型副本** ，语法示例如下：
+为了限定副本的 MemTable 内存属性，引入一个属性名为 memstore_percent，表示该 **副本 MemStore 占用内存上限与 leader 占用内存上限的比值** 。目前，memstore_percent 属性可以 **作用于 F、R 型副本** ，语法示例如下：
 
 ```sql
 locality='F@z1,F{memstore_percent:0}@z2,F{1,memstore_percent:100},R{ALL_SERVER}@z3,L@z4,L@z5'
@@ -37,14 +37,14 @@ locality='F@z1,F{memstore_percent:0}@z2,F{1,memstore_percent:100},R{ALL_SERVER}@
 
 目前该属性只有 0 和 100 两种取值：
 
-* 对于不给定 memstore_percent 属性的副本，等价于 `memstore_percent=100`，代表不限制 memstore 内存使用。
+* 对于不给定 memstore_percent 属性的副本，等价于 `memstore_percent=100`，代表不限制 MemStore 内存使用。
 
-* 特别的，对于 `memstore_percent=0` 的副本，这个副本没有 memstore，不做日志回放（节省了回放日志和转储的 CPU 开销）；该副本需要定期从其他副本拉取转储数据，以保障宕机后的恢复时间可控。
+* 特别的，对于 `memstore_percent=0` 的副本，这个副本没有 MemStore，不做日志回放（节省了回放日志和转储的 CPU 开销）；该副本需要定期从其他副本拉取转储数据，以保障宕机后的恢复时间可控。
 
 对于设置了 `memstore_percent=0` 属性的副本，我们称之为 **D 副本（Data Replica/D）** 。对于 D 副本：
 
 * F 型的 D 副本作为新主上任时，需要更长（分钟级）的宕机自动恢复时间。
 
-* D 副本的 memtable 内存占用为 0，不回放日志。
+* D 副本的 MemTable 内存占用为 0，不回放日志。
 
 对资源受限的业务场景，若其对宕机恢复时间不敏感，通过设置 D 副本可以显著减少内存资源占用。
