--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/3.partition-replica-type/2.all-round-replica.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/3.partition-replica-type/2.all-round-replica.md
@@ -1,10 +1,10 @@
 # 全能型副本
 #docslug#/oceanbase-database/oceanbase-database/V4.0.0/all-round-replica
-全能型副本是目前最广泛使用的副本类型，它拥有事务日志、MEMTable 和 SSTable 等全部完整的数据和功能。
+全能型副本是目前最广泛使用的副本类型，它拥有事务日志、Memable 和 SSTable 等全部完整的数据和功能。
 
 全能型副本具备以下特点：
 
-* 是目前最广泛使用的副本类型，它拥有事务日志、MEMTable 和 SSTable 等全部完整的数据和功能。
+* 是目前最广泛使用的副本类型，它拥有事务日志、MemTable 和 SSTable 等全部完整的数据和功能。
 
 * 可以随时快速切换为 Leader 对外提供服务。
 
@@ -18,7 +18,7 @@
 |----------------|-----------------------------|
 | 副本名称及缩写        | FULL(F)                     |
 | 是否有 Log        | 有，参与投票(SYNC_CLOG)           |
-| 是否有 MEMTable   | 有(WITH_MEMSTORE)            |
+| 是否有 MemTable   | 有(WITH_MEMSTORE)            |
 | 是否有 SSTable    | 有(WITH_SSSTORE)             |
 | 数据安全           | 高                           |
 | 恢复为 Leader 的时间 | 快                           |
