--- a/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/2.data-storage/2.MEMTable.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/2.data-storage/2.MEMTable.md
@@ -2,9 +2,9 @@
 
 ## MemTable 中的数据结构
 
-OceanBase 数据库的内存存储引擎 MEMTable 由 BTree 和 Hashtable 组成，在插入/更新/删除数据时，数据被写入内存块，在 HashTable 和 BTree 中存储的均为指向对应数据的指针。
+OceanBase 数据库的内存存储引擎 MemTable 由 BTree 和 Hashtable 组成，在插入/更新/删除数据时，数据被写入内存块，在 HashTable 和 BTree 中存储的均为指向对应数据的指针。
 
-![memtable](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/7073623461/p354858.jpg)
+![MemTable](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/7073623461/p354858.jpg)
 
 ## 两种数据结构的特点
 
