--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/3.blacklist-mechanism.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/3.blacklist-mechanism.md
@@ -1,10 +1,10 @@
 # 黑名单机制
 
-OBProxy 使用黑名单机制自适应处理 OBServer 节点的错峰合并、升级、leader 切换、宕机、启动和停止等过程中的 OBServer 节点访问控制。
+ODP 使用黑名单机制自适应处理 OBServer 节点的错峰合并、升级、leader 切换、宕机、启动和停止等过程中的 OBServer 节点访问控制。
 
 ## 背景信息
 
-OBProxy 有宕机黑名单和活着不可用黑名单两种类型，可通过设置参数对黑名单进行管理。
+ODP 有宕机黑名单和活着不可用黑名单两种类型，可通过设置参数对黑名单进行管理。
 
 通过黑名单可主要实现如下场景的访问控制：
 
@@ -40,9 +40,9 @@ OBProxy 有宕机黑名单和活着不可用黑名单两种类型，可通过设
 
 * 所在的 Server 正在做合并/升级。
 
-* OBServer 节点活着时的任何错误都会通过错误包形式返回，如果 OBServer 节点返回系统错误，比如：资源限制、连接数限制、系统内存超限、数据包校验出错、正在初始化、正在退出、OBServer 节点 response 超时、client connect 超时或者 OBProxy 等待超时等，该 OBServer 节点的活着不可用的计数加 1。如果 OBServer 节点在 N 秒内有 M 次活着不可用的失败计数，则将该 OBServer 节点加入活着不可用黑名单。
+* OBServer 节点活着时的任何错误都会通过错误包形式返回，如果 OBServer 节点返回系统错误，比如：资源限制、连接数限制、系统内存超限、数据包校验出错、正在初始化、正在退出、OBServer 节点 response 超时、client connect 超时或者 ODP 等待超时等，该 OBServer 节点的活着不可用的计数加 1。如果 OBServer 节点在 N 秒内有 M 次活着不可用的失败计数，则将该 OBServer 节点加入活着不可用黑名单。
 
-* 错峰合并开始时，Root Service 会先更新内部表设置 Zone 的合并状态，然后将需要合并的 Zone 上的主都切换到其它的 Zone。OBProxy 周期性更新 Zone 状态表获取 Zone 状态，Zone 状态更新后，该 Zone 里的 OBServer 节点都会设置为活着不可用。在错峰合并过程中，正在合并的 Zone 的 OBServer 节点都处于活着不可用黑名单。
+* 错峰合并开始时，Root Service 会先更新内部表设置 Zone 的合并状态，然后将需要合并的 Zone 上的主都切换到其它的 Zone。ODP 周期性更新 Zone 状态表获取 Zone 状态，Zone 状态更新后，该 Zone 里的 OBServer 节点都会设置为活着不可用。在错峰合并过程中，正在合并的 Zone 的 OBServer 节点都处于活着不可用黑名单。
 
 ## 黑名单优先级
 
@@ -56,19 +56,19 @@ OBProxy 有宕机黑名单和活着不可用黑名单两种类型，可通过设
 
 1. 在客户端中使用 root 用户登录集群的 `sys` 租户。
 
-2. 执行以下命令以查看 OBProxy 的配置参数。
+2. 执行以下命令以查看 ODP 的配置参数。
 
    ```sql
    obclient> SHOW PROXYCONFIG;
    ```
 
-3. 运行 `ALTER proxyconfig SET key=value` 命令更新 OBProxy 的指定配置参数，配置项更新后会立即生效。
+3. 运行 `ALTER proxyconfig SET key=value` 命令更新 ODP 的指定配置参数，配置项更新后会立即生效。
 
    与黑名单相关的配置参数描述如下表所示。
 
    |            **配置项**            |           **描述**           |
    |-------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-   | enable_congestion             | 是否启用黑名单机制。默认开启，在黑名单机制运行出问题时，可以暂时关闭这个选项让 OBProxy 能够正常工作。      |
+   | enable_congestion             | 是否启用黑名单机制。默认开启，在黑名单机制运行出问题时，可以暂时关闭这个选项让 ODP 能够正常工作。      |
    | congestion_failure_threshold  | 设置当 OBServer 节点在 N 秒内出错几次则将该 Server 节点加入黑名单。该参数值小于 0 时，则所有在黑名单中的 Server 都会被放出黑名单。 |
    | congestion_fail_window        | 设置错误统计周期的时间（秒）。默认值 120 秒，如果在这个错误统计周期中错误次数超过了 `congestion_failure_threshold` 的值，则将该 Server 节点加入黑名单。该参数值也可以动态调整，一旦修改了该参数，当前错误统计计数会被清零，将重新按新的 fail window 从头开始统计错误次数。 |
    | congestion_retry_interval     | 设置被加入活着不可用黑名单的 Server 的重试周期，默认值 20 秒。       |
@@ -254,7 +254,7 @@ alive_failure_events: 0
     <p>当 <code>dead_congested</code>、<code>alive_congested</code>、<code>is_zone_upgrading</code>、<code>is_zone_merging</code>、<code>is_server_upgrading</code> 中的任意一个状态为 true 时，表示该 OBServer 节点已加入黑名单。</p>
     </li>
     <li>
-    <p>OBProxy 1.1.2 版本之前， clustername 不需要单引号或者双引号引起来，1.1.2 版本及之后，必须要用单引号或者双引号引起来。</p>
+    <p>ODP 1.1.2 版本之前， clustername 不需要单引号或者双引号引起来，1.1.2 版本及之后，必须要用单引号或者双引号引起来。</p>
     </li>
     </ul>
   </main>
