--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/2.set-parameters.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/2.set-parameters.md
@@ -54,9 +54,9 @@ parameter_name = expression [SCOPE = {SPFILE | BOTH}] [COMMENT [=] 'text']
 
 * `SCOPE`：指定本次配置项修改的生效范围，默认为 `BOTH`。
 
-  * `SPFILE`：表示只修改内部表中的配置项值，当 OBServer 重启以后才生效。仅重启生效的配置项支持。
+  * `SPFILE`：表示只修改内部表中的配置项值，当 OBServer 节点重启以后才生效。仅重启生效的配置项支持。
 
-  * `BOTH`：表示既修改内部表中的配置项值，又修改内存中的配置项值，修改立即生效，且 OBServer 重启以后配置值仍然生效。
+  * `BOTH`：表示既修改内部表中的配置项值，又修改内存中的配置项值，修改立即生效，且 OBServer 节点重启以后配置值仍然生效。
 
 * `TENANT`：用于在系统租户下，修改所有或指定租户的租户级配置项。
 
@@ -190,10 +190,10 @@ obclient> SHOW PARAMETERS LIKE 'large_query_threshold';
 | data_type  | 配置项数据类型，包括 `NUMBER` 、`STRING` 、`CAPACITY` 等                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
 | value      | 配置项值 <br>**说明**<br>  由于在修改配置项值时，支持修改指定 Zone 或 Server 的配置项值，故不同 Zone 或 Server 对应的配置项的值可能不同。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
 | info       | 配置项的说明信息                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
-| section    | 配置项所属的分类： <ul><li>`SSTABLE`：表示 SSTable 相关的配置项。</li><li> `OBSERVER`：表示 OBServer 相关的配置项。   </li><li>`ROOT_SERVICE`：表示 Root Service 相关的配置项。</li><li> `TENANT`：表示租户相关的配置项。   </li><li>`TRANS`：表示事务相关的配置项。</li><li> `LOAD_BALANCE`：表示负载均衡相关的配置项。   </li><li>`DAILY_MERGE`：表示合并相关的配置项。</li><li> `CLOG`：表示 Clog 相关的配置项。   </li><li>`LOCATION_CACHE`：表示 Location Cache 相关的配置项。</li><li> `CACHE`：表示缓存相关的配置项。   </li><li>`RPC`：表示 RPC 相关的配置项。</li><li> `OBPROXY`：表示 OBProxy 相关的配置项。</li></ul>    |
+| section    | 配置项所属的分类： <ul><li>`SSTABLE`：表示 SSTable 相关的配置项。</li><li> `OBSERVER`：表示 OBServer 节点相关的配置项。   </li><li>`ROOT_SERVICE`：表示 Root Service 相关的配置项。</li><li> `TENANT`：表示租户相关的配置项。   </li><li>`TRANS`：表示事务相关的配置项。</li><li> `LOAD_BALANCE`：表示负载均衡相关的配置项。   </li><li>`DAILY_MERGE`：表示合并相关的配置项。</li><li> `CLOG`：表示 Clog 相关的配置项。   </li><li>`LOCATION_CACHE`：表示 Location Cache 相关的配置项。</li><li> `CACHE`：表示缓存相关的配置项。   </li><li>`RPC`：表示 RPC 相关的配置项。</li><li> `OBPROXY`：表示 OBProxy 相关的配置项。</li></ul>    |
 | scope      | 配置项范围属性： <ul><li>`TENANT`：表示该配置项为租户级配置项</li><li> `CLUSTER`：表示该配置项为集群级配置项</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
 | source     | 当前值来源： <ul><li>`TENANT`</li><li> `CLUSTER`   </li><li>`CMDLINE`</li><li> `OBADMIN`   </li><li>`FILE`</li><li> `DEFAULT`  </li></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
-| edit_level | 定义该配置项的修改行为：<ul><li>`READONLY`：表示该参数不可修改。</li><li> `STATIC_EFFECTIVE`：表示该参数可修改但需要重启 OBServer 才会生效。</li><li>  `DYNAMIC_EFFECTIVE`：表示该参数可修改且修改后动态生效。</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
+| edit_level | 定义该配置项的修改行为：<ul><li>`READONLY`：表示该参数不可修改。</li><li> `STATIC_EFFECTIVE`：表示该参数可修改但需要重启 OBServer 节点才会生效。</li><li>  `DYNAMIC_EFFECTIVE`：表示该参数可修改且修改后动态生效。</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
 
 ## 更多信息
 
