--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/10.tenant-performance-monitoring.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/10.tenant-performance-monitoring.md
@@ -21,7 +21,7 @@
    | 选择时间（实时模式下不展示） | 选择某一段时间范围，用于返回这段时间范围内的数据。           |
    | 统计周期（实时模式下不展示） | 主要用于计算每个点数据的统计周期，支持按 **每分钟** 和 **每秒** 统计，分别对应了每分钟一个点或每秒钟一个点，OCP 同时也会根据选择的时间区间再去计算一个统计周期。 </br>计算的规则是使返回的数据接近 1440 个点，如果选择的时间区间比较长，可能会出现统计周期大于 1 分钟的情况。 |
    | Zone           | 选择待查看的 Zone 。         |
-   | OBServer       | 选择待查看的 OBServer 。     |
+   | OBServer       | 选择待查看的 OBServer 节点。     |
 
    * 输入过滤条件后，系统按 **选择的时间** 及 **统计周期** 展示性能监控数据。
   
@@ -32,16 +32,16 @@
     <p>如需查看某一时间段内的详细趋势，可鼠标拖拽选中该区域，系统会放大显示该区域的趋势信息，双击该趋势图可恢复。</p>
   </main>
 
-   * 打开 **实时** 开关并选择需查看的 OBServer，系统实时展示该 OBServer 的性能数据。
+   * 打开 **实时** 开关并选择需查看的 OBServer 节点，系统实时展示该 OBServer 节点的性能数据。
   
       ![06091759](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/7113323261/p282527.png)
 
 6. 切换页签，分别查看集群的 **性能与 SQL** 、 **事务** 、 **存储与缓存** 的性能监控数据。
 
-   * 单击 **性能与 SQL** 页签，查看 SQL 执行相关的性能，包括 QPS、响应时间、会话数、SQL 执行计划类别、等待事件、等待时间耗时、请求等待队列、请求等待队列耗时、CPU 使用率、MEMStore 使用百分比、Rpc 包耗时、Rpc 包吞吐量、打开的游标数 和 clog 同步延迟。
+   * 单击 **性能与 SQL** 页签，查看 SQL 执行相关的性能，包括 QPS、响应时间、会话数、SQL 执行计划类别、等待事件、等待时间耗时、请求等待队列、请求等待队列耗时、CPU 使用率、MemStore 使用百分比、Rpc 包耗时、Rpc 包吞吐量、打开的游标数 和 clog 同步延迟。
 
    * 单击 **事务** 页签，查看事务相关的性能，包括 TPS、事务响应时间、事务日志数、事务日志量、事务日志耗时、锁等待、等锁耗时和事务数量。
 
-   * 单击 **存储与缓存** 页签，查看存储与缓存相关的性能，包括 MEMStore、IOPS、IO 耗时、IO 吞吐量、缓存大小、缓存命中率和缓存请求次数。
+   * 单击 **存储与缓存** 页签，查看存储与缓存相关的性能，包括 MemStore、IOPS、IO 耗时、IO 吞吐量、缓存大小、缓存命中率和缓存请求次数。
 
    更多详细介绍及说明，请参见 OCP 对应版本的 《用户指南》 中的 [租户性能监控](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000000775968)。
