--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md
@@ -81,9 +81,9 @@ OceanBase 数据库默认会自动创建 sys 租户，sys 租户负责一部分 
 
    其中：
 
-   * UNIT_NUM 表示在集群的一个 Zone 里面包含的资源单元个数。该值小于等于一个 Zone 中的 OBServer 的个数。
+   * `UNIT_NUM` 表示在集群的一个 Zone 里面包含的资源单元个数。该值小于等于一个 Zone 中 OBServer 节点的个数。
 
-   * ZONE_LIST 表示资源池的 Zone 列表，显示该资源池的资源在哪些 Zone 中被使用。
+   * `ZONE_LIST` 表示资源池的 Zone 列表，显示该资源池的资源在哪些 Zone 中被使用。
 
    * 如果在某个 Zone 内找不到足够剩余资源的机器来创建资源单元，资源池会创建失败。
 
