--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/5.locality-management/3.modify-the-tenant-s-locality.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/5.locality-management/3.modify-the-tenant-s-locality.md
@@ -13,7 +13,7 @@ OceanBase 数据库支持修改租户级的 Locality。
     <p>更多 Locality 的使用规则，参见 <a href="../5.locality-management/1.locality-overview.md">Locality 概述</a>。</p>
   </main>
 
-变更 Locality 之前，需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的 OBServer 资源不足导致无法存放租户需要的资源单元，则将导致无法进行 Locality 变更。
+变更 Locality 之前，需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的 OBServer 节点资源不足导致无法存放租户需要的资源单元，则将导致无法进行 Locality 变更。
 
 有关 Zone 上资源单元和资源池的状态的检查方法，请参见 [查看集群的资源信息](../../2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
 
