--- a/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/3.partition-table-design.md
+++ b/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/3.partition-table-design.md
@@ -8,9 +8,9 @@
 
   * 分区表在表创建的时候需要指定，后续不支持将非分区表在线改造成分区表，也不支持分区数量、分区类型、分区键值的在线调整。
 
-  * 善用 Tablegroup 技术。
+  * 善用 Table Group 技术。
 
-    如果多张表通过各自的分区键进行关联，且分区键的分区策略一致，比如都是 hash 分区，且分区数也相等，可以把多张表通过 Tablegroup 技术放到一个表组中提高关联效率。
+    如果多张表通过各自的分区键进行关联，且分区键的分区策略一致，比如都是 Hash 分区，且分区数也相等，可以把多张表通过 Tablegroup 技术放到一个表组中提高关联效率。
 
   * 分区表约束注意事项。
 
