--- a/zh-CN/6.manage/2.tenant-management/2.tenant-type.md
+++ b/zh-CN/6.manage/2.tenant-management/2.tenant-type.md
@@ -70,4 +70,4 @@ obclient [oceanbase]> select * from DBA_OB_TENANTS;
 | 数据属性 | 集群私有数据    | 集群私有数据 | 集群私有数据 |
 | 扩展性 | 数据不可水平扩展，只有一个日志流    | 具备水平扩展能力，支持动态扩容和缩容 | 数据不可水平扩展，只有一个日志流 |
 | 租户运维 | <ul><li>创建：不支持</li><li>删除：不支持</li><li>重命名：不支持</li><li>用户登录：支持</li><li>修改 Locality：支持</li><li>修改 Primary Zone：支持</li></ul>   | <ul><li>创建：支持</li><li>删除：支持</li><li>重命名：支持</li><li>用户登录：支持</li><li>修改 Locality：支持</li><li>修改 Primary Zone：支持</li></ul>  | <ul><li>创建：不支持</li><li>删除：不支持</li><li>重命名：不支持</li><li>用户登录：不支持</li><li>修改 Locality：不支持</li><li>修改 Primary Zone：不支持</li></ul>  |
-| 数据对外访问接口 | 系统租户下的视图。    | <ol><li>系统租户下：<ol><li>`CDB_xxx` 视图和动态性能视图会展示所有用户租户的数据。</li><li>`DBA_OB_TENANTS` 视图会展示所有用户租户的信息。</li></ol></li><li> 用户租户下：展示本租户的数据。</li></ol>| Meta 租户不能直接登录，它的信息可以通过用户租户和系统租户进行访问。<ol><li>系统租户下：<ol><li>`CDB_xxx` 视图和动态性能视图会展示所有 -Meta 租户的数据。</li><li>`DBA_OB_TENANTS` 视图会展示所有 Meta 租户的信息。</li></ol></li><li> 用户租户下：Meta 租户管理的数据会通过用户租户下的视图展示出来，例如路由信息 `DBA_OB_LS_LOCATIONS`、配置项信息 `GV$OB_PARAMETERS` 等。</li></ol> |
+| 数据对外访问接口 | 系统租户下的视图。    | <ul><li>系统租户下：<ul><li>`CDB_xxx` 视图和动态性能视图会展示所有用户租户的数据。</li><li>`DBA_OB_TENANTS` 视图会展示所有用户租户的信息。</li></ul></li><li> 用户租户下：展示本租户的数据。</li></ul>| Meta 租户不能直接登录，它的信息可以通过用户租户和系统租户进行访问。<ul><li>系统租户下：<ul><li>`CDB_xxx` 视图和动态性能视图会展示所有 -Meta 租户的数据。</li><li>`DBA_OB_TENANTS` 视图会展示所有 Meta 租户的信息。</li></ul></li><li> 用户租户下：Meta 租户管理的数据会通过用户租户下的视图展示出来，例如路由信息 `DBA_OB_LS_LOCATIONS`、配置项信息 `GV$OB_PARAMETERS` 等。</li></ul> |
